--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  padding-top:50px;
+  padding-top:0px;
   color:#646464;
   background-color:#efefef;
 }
@@ -156,6 +156,9 @@ a,a:hover {
   opacity:.9;
   padding:6px;
   color:#fff;
+}
+.row{
+  margin-top:
 }
     
 .btn-twitter {background-color:#4099FF;color:#fff;}
