--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -120,7 +120,7 @@
               <div class="col-md-10 col-sm-9">
                 <h3>Repurpose Content to Reach a Wider Audience</h3>
                 <div class="row">
-                  <div class="col-xs-9">
+                  <div class="col-sm-9">
                     <h4><span class="label label-default">97thfloor.com</span></h4>
                     <h4>
                       <small style="font-family:courier,'new courier';" class="text-muted">2 hours ago • <a href="#"
@@ -143,7 +143,7 @@
               <div class="col-md-10 col-sm-9">
                 <h3>14 Useful Sites for Designers</h3>
                 <div class="row">
-                  <div class="col-xs-9">
+                  <div class="col-sm-9">
                     <h4><span class="label label-default">devgarage.com</span></h4>
                     <h4>
                       <small style="font-family:courier,'new courier';" class="text-muted">Yesterday • <a href="#"
@@ -166,7 +166,7 @@
               <div class="col-md-10 col-sm-9">
                 <h3>Measuring Your Link Building with Google Analytics</h3>
                 <div class="row">
-                  <div class="col-xs-9">
+                  <div class="col-sm-9">
                     <h4><span class="label label-default">searchenginewatch.com</span></h4>
                     <h4>
                       <small style="font-family:courier,'new courier';" class="text-muted">Yesterday • <a href="#"
@@ -189,7 +189,7 @@
               <div class="col-md-10 col-sm-9">
                 <h3>Dramatically Raise the Value of Any Piece of Content with These 27 Tactics</h3>
                 <div class="row">
-                  <div class="col-xs-9">
+                  <div class="col-sm-9">
                     <h4><span class="label label-default">searchenginewatch.com</span></h4>
                     <h4>
                       <small style="font-family:courier,'new courier';" class="text-muted">2 days ago • <a href="#"
@@ -212,7 +212,7 @@
               <div class="col-md-10 col-sm-9">
                 <h3>TrendPaper - What's Trending in the World</h3>
                 <div class="row">
-                  <div class="col-xs-9">
+                  <div class="col-sm-9">
                     <h4><span class="label label-default">betali.st</span></h4>
                     <h4>
                       <small style="font-family:courier,'new courier';" class="text-muted">Last week • <a href="#"
