--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -157,10 +157,17 @@ a,a:hover {
   padding:6px;
   color:#fff;
 }
-.row{
-  margin-top:
+.label-default{
+  background-color:gray;
+  color: whitesmoke;
+  border-radius: 20px;
+  padding-right:10px;
+  padding-left: 10px;
 }
     
+.li {
+  display:inline;
+}
 .btn-twitter {background-color:#4099FF;color:#fff;}
 .btn-facebook {background-color:#3B5998;color:#fff;}
 .btn-google-plus {background-color:#d34836;color:#fff;}
